# talon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  talon-server.spec  video_plan.md
.claude/commands/: board-updater.md  browser-validator.md  refiner.md  self-reviewer.md  task-executor.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
electron/: main.js  package-lock.json  package.json  preload.js
electron/icons/: icon.icns
examples/: example_task.json
src/: config.py  loop.py  main.py  tools.py  types.py  webhook.py
src/providers/: __init__.py  anthropic_p.py  litellm_p.py  openai_p.py
src/skills/: __init__.py  board_updater.py  browser_validator.py  refiner.py  self_reviewer.py  task_executor.py
talon/: __main__.py  background.py  browser_setup.py  config.py  db.py  loop.py  main.py  server.py  server_entry.py  tools.py  types.py  webhook.py  workspace.py
talon/providers/: __init__.py  base.py  litellm_p.py
talon/routers/: auth.py  github.py  issues.py  projects.py  runs.py  settings.py  webhooks.py  websocket.py
talon/skills/: __init__.py  board_updater.py  browser_validator.py  nav_planner.py  plan_refiner.py  (+7 more)
tests/: conftest.py  test_billing.py  test_browser_validator.py  test_bundle_deps.py  test_config.py  test_db.py  test_pr_creator.py  test_providers.py  test_screenshot_endpoint.py  test_server_entry.py  test_tools.py  test_types.py  test_webhook.py  test_workspace.py
ui/: index.html  package-lock.json  package.json
(+21 files in other folders)
