[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talon"
version = "0.5.2"
description = "Autonomous agentic coding system — decompose, execute, review, iterate."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agents", "llm", "automation", "kanban", "coding"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "litellm>=1.40.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0",
  "asyncio-throttle>=1.0.2",
  "websockets>=12.0",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
talon = "talon.main:main"

[project.urls]
Homepage = "https://github.com/mjkgreen/talon-agent"
Issues   = "https://github.com/mjkgreen/talon-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["talon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
